# FlowPilot

./: .env.example  .gitignore  README.md  build_pipeline.py  chat_ui.py  plan_manifests.jsonl  plan_manifests.jsonl.template  pyproject.toml
.github/workflows/: ci.yml
configs/: config.example.yaml
src/agents/: __init__.py  codegen.py  core.py  default_tools.json  llm.py  manifest.py  pipeline.py  pipeline_builder.py  planner.py  registry.py  summarizer.py
src/agents_for_agents/: __init__.py
src/agents_for_agents/agents/: __init__.py  planner.py
src/agents_for_agents/tools/: __init__.py  evaluation.py  generator.py  retriever.py
src/tools/: models.py  reranker.py
tests/: test_agent_entrypoint.py  test_core.py  test_pipeline_agent.py  test_planning_agent.py  test_tools.py
tools/: run_checks.sh
