[tool.poetry]
name = "agents-for-agents"
version = "0.1.0"
description = "Poetry-based scaffold for the AgentsForAgents codebase"
authors = ["Saikat Bhattacharya <saikat@example.com>"]
readme = "README.md"
packages = [
  { include = "agents", from = "src" },
  { include = "tools", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.40.0"
python-dotenv = "^1.0.1"
anthropic = "^0.31.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ruff = "^0.5.4"
pytest = "^8.2"
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.mypy_cache
  | \\.pytest_cache
  | \\.ruff_cache
  | build
  | dist
)/
"""

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "I",
  "UP",
  "N",
  "S",
  "W"
]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
mypy_path = ["src"]
